Fixed navbar and logo

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1770,7 +1770,10 @@ input, select, textarea {
 
 /* Nav */
 
-		
+		.navbar-brand{
+			padding-top:12px;
+			margin-left:10px;
+		}
 
 	#nav {
 		text-align: center;
